# tg_info_bot

./: Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  for_test_quiz.py  for_test_scenario_processing.py  get_config.py  init.sh  json_params.py  logger.py  main.py  pyproject.toml  requirements.txt  run.sh  run_event_listener.py  run_event_processing.py  telegram_api.py  tg_buttons.json  tg_callback_message.json  tg_contact_message.json  tg_new_text_message.json  tg_update_text_message.json
credentials/: readme
files/: users_314602198.xlsx
scenario/: .~lock.scenario.ods#  bot.sql  quiz_test.json  quiz_ural.json  scenario.ods
src/apps/event_listener/: app.py
src/apps/event_processing/: app.py
src/core/: command_processing.py  models.py  quiz_processing.py  scenario_processing.py
src/infra/db/: bots.db  db_base.py  db_data.py  exceptions.py  models.py
src/infra/db/migration/: env.py  model.py
src/infra/db/migration/versions/: 0cabd0f230e8_identify_db.py  3a6e1b19809a_score_added.py  710fc553e127_bot_description_added.py  92b44bf95062_add_columns.py  a5b70f54ba1a_scenario.py  aa10332010e9_identify_db.py  b89c560f761a_chat_id_added.py  e9699288c23c_add_admin.py
src/infra/gateways/: base_file_loader.py  google_disk_loader.py  google_sheets_api.py  rabbitmq_api.py  redis_api.py  telegram_api.py  yandex_disk_loader.py
tg_simple_math_bot/: app.py  data_types.py  errors.py  settings.py
tg_simple_math_bot/integrations/: api_telegram.py  base.py
tg_simple_math_bot/services/: calculate.py  decorators.py  handler.py
