[tool.poetry]
name = "tg_simple_math_bot"
version = "0.1.0"
description = ""
authors = ["Alexander M <amakridin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
poetry = "run"
aiohttp = "^3.8.1"
pydantic = "^1.9.1"
requests = "^2.27.1"
aioredis = "^2.0.1"
pytest = "^7.1.2"
aioresponses = "^0.7.3"
async-asgi-testclient = "^1.4.10"
testcontainers = "^3.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
